# glWrap

./: .gitignore  CMakeLists.txt  README.md  get_latest_repos.sh  main.cpp  run.sh  setup.sh
include/: BufferObject.hpp  Camera.hpp  Event.hpp  EventDispatcher.hpp  EventReceiver.hpp  FragmentShader.hpp  Framebuffer.hpp  GLBindable.hpp  GLHeaders.hpp  GLInit.hpp  IndexBufferObject.hpp  Mesh.hpp  ReadFile.hpp  SDLEventLoop.hpp  SDLEventReceiver.hpp  SDLInputHandler.hpp  Shader.hpp  ShaderProgram.hpp  Transform.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  VertexShader.hpp  Window  Window.hpp
shaders/: basic.fs  basic.fs.glsl  basic.vs  basicMVP.vs
src/: BufferObject.cpp  CMakeLists.txt  Camera.cpp  EventDispatcher.cpp  EventReceiver.cpp  FragmentShader.cpp  Framebuffer.cpp  GLBindable.cpp  GLInit.cpp  IndexBufferObject.cpp  Mesh.cpp  ReadFile.cpp  SDLEventLoop.cpp  SDLEventReceiver.cpp  SDLInputHandler.cpp  Shader.cpp  ShaderProgram.cpp  Transform.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  VertexShader.cpp  Window  Window.cpp
